
[0.1.0]
- Merge method
- Always sorted
- Add transformations
- Add rest support
- Parse strings and arrays